.provarCaches/00D410000011HE0EAM/objects/rstk__plmitem__c.object
<CustomObject>
    <description>plmitem__c</description>
    <fields>
        <fullName>rstk__Errors__c</fullName>
        <label>Errors</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__Item_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If item processed or error out.</description>
        <label>Item Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__plmitem_plmimport__r.rstk__plmimport_sessionid__c+&apos;-&apos;+rstk__plmitem_item__c, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_action__c</fullName>
        <label>Import Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__plmitem_amchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Mfg Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_bomchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOM Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_bomphaseout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phase Out Existing BOM (No Replacement)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_createprod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_desc__c</fullName>
        <label>Item Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_iccomcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>PLM Import Items</relationshipLabel>
        <relationshipName>plmitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PLM Import Items</relationshipLabel>
        <relationshipName>plmitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_item__c</fullName>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_itemid__c</fullName>
        <label>PLM Record ID for Item (guid)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_itemname__c</fullName>
        <label>Item Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_numberboms__c</fullName>
        <label>Number of BOM Details</label>
        <summaryForeignKey>rstk__plmbom__c.rstk__plmbom_plmitem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_peitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rootstock Engineering Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>PLM Import Items</relationshipLabel>
        <relationshipName>plmitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_peitemrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rootstock Item Revision</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>PLM Import Items (Rootstock Item Revision)</relationshipLabel>
        <relationshipName>plmitems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_plmimport__c</fullName>
        <label>PLM Import Session</label>
        <referenceTo>rstk__plmimport__c</referenceTo>
        <relationshipLabel>PLM Import Items</relationshipLabel>
        <relationshipName>plmitems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_prevpeitemrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Rootstock Item Revision</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>PLM Import Items</relationshipLabel>
        <relationshipName>plmitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_rev__c</fullName>
        <label>Revision Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_socomm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>rstk__socomm__c</referenceTo>
        <relationshipLabel>PLM Import Items</relationshipLabel>
        <relationshipName>plmitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmitem_uom__c</fullName>
        <label>UOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PLM Import Item</label>
    <listViews>
        <fullName>PLMITEM_SMW</fullName>
        <columns>NAME</columns>
        <columns>rstk__Item_Processed__c</columns>
        <columns>rstk__plmitem_itemname__c</columns>
        <columns>rstk__plmitem_item__c</columns>
        <columns>rstk__plmitem_peitem__c</columns>
        <columns>rstk__plmitem_peitemrev__c</columns>
        <columns>rstk__plmitem_rev__c</columns>
        <columns>rstk__Errors__c</columns>
        <columns>rstk__plmitem_errors__c</columns>
        <columns>rstk__plmitem_numberboms__c</columns>
        <columns>rstk__plmitem_plmimport__c</columns>
        <columns>rstk__plmitem_bomchange__c</columns>
        <columns>rstk__plmitem_desc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__plmitem_plmimport__c</field>
            <operation>equals</operation>
            <value>23</value>
        </filters>
        <label>PLMITEM-SMW</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PLM_Import_Items</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstk__plmitem_plmimport__c</columns>
        <columns>rstk__Item_Processed__c</columns>
        <columns>rstk__plmitem_item__c</columns>
        <columns>rstk__plmitem_desc__c</columns>
        <columns>rstk__plmitem_rev__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__plmitem_numberboms__c</columns>
        <columns>rstk__plmitem_invdiv__c</columns>
        <columns>rstk__plmitem_iccomcod__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__Errors__c</columns>
        <columns>rstk__plmitem_errors__c</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>PLM Import Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PLM_Items_Today</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstk__plmitem_plmimport__c</columns>
        <columns>rstk__Item_Processed__c</columns>
        <columns>rstk__plmitem_item__c</columns>
        <columns>rstk__plmitem_desc__c</columns>
        <columns>rstk__plmitem_rev__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__plmitem_numberboms__c</columns>
        <columns>rstk__plmitem_invdiv__c</columns>
        <columns>rstk__plmitem_iccomcod__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__Errors__c</columns>
        <columns>rstk__plmitem_errors__c</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>PLM Items - Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__ALL</fullName>
        <columns>NAME</columns>
        <columns>rstk__plmitem_createprod__c</columns>
        <columns>rstk__plmitem_iccomcod__c</columns>
        <columns>rstk__plmitem_invdiv__c</columns>
        <columns>rstk__plmitem_desc__c</columns>
        <columns>rstk__plmitem_item__c</columns>
        <columns>rstk__plmitem_plmimport__c</columns>
        <columns>rstk__plmitem_itemid__c</columns>
        <columns>rstk__plmitem_prevpeitemrev__c</columns>
        <columns>rstk__plmitem_rev__c</columns>
        <columns>rstk__plmitem_peitem__c</columns>
        <columns>rstk__plmitem_uom__c</columns>
        <columns>rstk__plmitem_action__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__plmitem_createprod__c</columns>
        <columns>rstk__plmitem_iccomcod__c</columns>
        <columns>rstk__plmitem_socomm__c</columns>
        <columns>rstk__Item_Processed__c</columns>
        <columns>rstk__plmitem_invdiv__c</columns>
        <columns>rstk__plmitem_desc__c</columns>
        <columns>rstk__plmitem_item__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__plmitem_plmimport__c</columns>
        <columns>rstk__plmitem_itemid__c</columns>
        <columns>rstk__plmitem_prevpeitemrev__c</columns>
        <columns>rstk__plmitem_rev__c</columns>
        <columns>rstk__plmitem_peitem__c</columns>
        <columns>rstk__plmitem_action__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PLM_Import_Item_RA</fullName>
        <columns>NAME</columns>
        <columns>rstk__plmitem_plmimport__c</columns>
        <columns>rstk__Item_Processed__c</columns>
        <columns>rstk__plmitem_item__c</columns>
        <columns>rstk__plmitem_desc__c</columns>
        <columns>rstk__plmitem_numberboms__c</columns>
        <columns>rstk__plmitem_errors__c</columns>
        <columns>rstk__plmitem_rev__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__plmitem_uom__c</columns>
        <columns>rstk__plmitem_invdiv__c</columns>
        <columns>rstk__plmitem_iccomcod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>PLM Import Items - Last 2 Days</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Import Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_Item_Revision</fullName>
        <active>true</active>
        <description>Rootstock Engineering Item must match Rootstock Item Revision&apos;s Item</description>
        <errorConditionFormula>rstk__plmitem_peitem__c != null &amp;&amp;  rstk__plmitem_peitemrev__r.rstk__peitemrev_item__c != null &amp;&amp; rstk__plmitem_peitem__c != rstk__plmitem_peitemrev__r.rstk__peitemrev_item__c</errorConditionFormula>
        <errorMessage>Rootstock Engineering Item must match Rootstock Item Revision&apos;s Item</errorMessage>
    </validationRules>
</CustomObject>